avance hasta validaciones

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="tv_shadow">#464646</color>
     <color name="color_negro">#000000</color>
+    <color name="color_verde">#01DF01</color>
 </resources>
