--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
+        app:title="@string/app_name"
         />
 
     <TextView
@@ -20,57 +21,66 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="60dp"
         android:fontFamily="@font/droid_sans_bold"
         android:textColor="#000000"
         android:textSize="16sp" />
+
+    <include
+        layout="@layout/saldoactual"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="40dp"
-        android:layout_marginHorizontal="50dp">
-        <include
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            layout="@layout/table"/>
-    </LinearLayout>
+        android:layout_marginHorizontal="35dp"
+        android:layout_marginVertical="15dp">
 
+        <include
+            layout="@layout/table"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"/>
+
+    </LinearLayout>
 
 
     <Button
         android:id="@+id/button_nuevo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="15dp"
+        android:layout_marginBottom="10dp"
         android:background="@color/colorPrimary"
         android:fontFamily="@font/droid_sans_bold"
         android:text="@string/boton_nuevo"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
-        android:layout_marginTop="20"
-        android:layout_marginBottom="10dp"
-        android:layout_marginHorizontal="15dp"/>
+        android:onClick="nuevoIngreso" />
 
     <Button
         android:id="@+id/button_egreso"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="15dp"
+        android:layout_marginBottom="10dp"
+        android:background="@color/colorPrimary"
         android:fontFamily="@font/droid_sans_bold"
         android:text="@string/boton_egreso"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
-        android:background="@color/colorPrimary"
-        android:layout_marginBottom="10dp"
-        android:layout_marginHorizontal="15dp"/>
+        android:onClick="nuevoEgreso"/>
 
     <Button
         android:id="@+id/button_detalle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="15dp"
         android:background="@color/colorPrimary"
         android:fontFamily="@font/droid_sans_bold"
         android:text="@string/boton_detalle"
         android:textAllCaps="false"
-        android:textColor="#FFFFFF"
-        android:layout_marginHorizontal="15dp"/>
+        android:textColor="#FFFFFF" />
 
 </LinearLayout>
