--- a/app/src/main/res/layout/table.xml
+++ b/app/src/main/res/layout/table.xml
@@ -34,16 +34,17 @@
 
     </TableRow>
     <TableRow>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/label_egreso"
-            android:textSize="16sp"
-            android:layout_weight="1"
-            android:gravity="start"
-            android:background="#ffffff"
             android:layout_marginLeft="1dp"
-            android:layout_marginBottom="1dp" />
+            android:layout_marginBottom="1dp"
+            android:layout_weight="1"
+            android:background="#ffffff"
+            android:gravity="start"
+            android:text="@string/label_egreso"
+            android:textSize="16sp" />
 
         <TextView
             android:layout_width="wrap_content"
