--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -81,6 +81,7 @@
         android:fontFamily="@font/droid_sans_bold"
         android:text="@string/boton_detalle"
         android:textAllCaps="false"
-        android:textColor="#FFFFFF" />
+        android:textColor="#FFFFFF"
+        android:onClick="mostrarDetalle"/>
 
 </LinearLayout>
