--- a/app/src/main/res/layout/ingreso.xml
+++ b/app/src/main/res/layout/ingreso.xml
@@ -101,7 +101,8 @@
         android:fontFamily="@font/droid_sans_bold"
         android:text="Aceptar"
         android:textAllCaps="false"
-        android:textColor="#FFFFFF"/>
+        android:textColor="#FFFFFF"
+        android:onClick="cargarIngreso"/>
 
     <Button
         android:id="@+id/cancelar"
