--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="tv_shadow">#464646</color>
     <color name="color_negro">#000000</color>
     <color name="color_verde">#01DF01</color>
+    <color name="color_blanco">#FFFFFF</color>
 </resources>
