--- a/app/src/main/res/layout/table.xml
+++ b/app/src/main/res/layout/table.xml
@@ -8,6 +8,7 @@
 
     <TableRow>
         <TextView
+            android:id="@+id/row"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/label_ingreso"
