--- a/app/src/main/res/layout/table.xml
+++ b/app/src/main/res/layout/table.xml
@@ -18,8 +18,7 @@
             android:background="#ffffff"
             android:layout_marginTop="1dp"
             android:layout_marginLeft="1dp"
-            android:layout_marginBottom="1dp"
-/>
+            android:layout_marginBottom="1dp" />
 
         <TextView
             android:layout_width="wrap_content"
