--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,16 +35,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="35dp"
-        android:layout_marginVertical="15dp">
+        android:layout_marginHorizontal="40dp"
+        android:layout_marginTop="20dp">
 
         <include
             layout="@layout/table"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"/>
-
     </LinearLayout>
-
 
     <Button
         android:id="@+id/button_nuevo"
@@ -52,6 +50,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="15dp"
         android:layout_marginBottom="10dp"
+        android:layout_marginTop="20dp"
         android:background="@color/colorPrimary"
         android:fontFamily="@font/droid_sans_bold"
         android:text="@string/boton_nuevo"
