--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,8 +2,9 @@
 <resources>
     <color name="colorPrimary">#646585</color>
     <color name="colorPrimaryDark">#646585</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#FD0000</color>
     <color name="tv_shadow">#464646</color>
     <color name="color_negro">#000000</color>
-    <color name="color_verde">#01DF01</color>
+    <color name="color_verde">#60FF07</color>
+    <color name="color_blanco">#FFFFFF</color>
 </resources>
