--- a/app/src/main/res/layout/saldoactual.xml
+++ b/app/src/main/res/layout/saldoactual.xml
@@ -4,5 +4,5 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:textAlignment="center"
-    android:textSize="30dp">
+    android:textSize="32sp">
 </TextView>
