--- a/app/src/main/res/layout/table.xml
+++ b/app/src/main/res/layout/table.xml
@@ -7,18 +7,20 @@
     android:background="@color/color_negro">
 
     <TableRow>
+
         <TextView
             android:id="@+id/row"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/label_ingreso"
-            android:textSize="20sp"
-            android:layout_weight="1"
-            android:gravity="start"
-            android:background="#ffffff"
-            android:layout_marginTop="1dp"
             android:layout_marginLeft="1dp"
-            android:layout_marginBottom="1dp" />
+            android:layout_marginTop="1dp"
+            android:layout_marginBottom="1dp"
+            android:layout_weight="1"
+            android:background="#ffffff"
+            android:gravity="start"
+            android:padding="20dp"
+            android:text="@string/label_ingreso"
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/total_ingreso"
@@ -30,12 +32,14 @@
             android:background="#ffffff"
             android:layout_marginTop="1dp"
             android:layout_marginRight="1dp"
-            android:layout_marginBottom="1dp"/>
+            android:layout_marginBottom="1dp"
+            android:padding="20dp"/>
 
     </TableRow>
     <TableRow>
 
         <TextView
+            android:id="@+id/row1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="1dp"
@@ -44,7 +48,8 @@
             android:background="#ffffff"
             android:gravity="start"
             android:text="@string/label_egreso"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:padding="20dp"/>
 
         <TextView
             android:id="@+id/total_egreso"
@@ -55,13 +60,15 @@
             android:gravity="center"
             android:background="#ffffff"
             android:layout_marginRight="1dp"
-            android:layout_marginBottom="1dp"/>
+            android:layout_marginBottom="1dp"
+            android:padding="20dp"/>
 
 
     </TableRow>
 
     <TableRow>
         <TextView
+            android:id="@+id/row2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/label_gastos"
@@ -70,7 +77,8 @@
             android:gravity="start"
             android:background="#ffffff"
             android:layout_marginLeft="1dp"
-            android:layout_marginBottom="1dp"/>
+            android:layout_marginBottom="1dp"
+            android:padding="20dp"/>
 
         <TextView
             android:id="@+id/total_tc"
@@ -81,7 +89,8 @@
             android:gravity="center"
             android:background="#ffffff"
             android:layout_marginRight="1dp"
-            android:layout_marginBottom="1dp"/>
+            android:layout_marginBottom="1dp"
+            android:padding="20dp"/>
 
 
     </TableRow>
