--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,6 +53,7 @@
         android:layout_marginTop="20dp"
         android:background="@color/colorPrimary"
         android:fontFamily="@font/droid_sans_bold"
+        android:textSize="18sp"
         android:text="@string/boton_nuevo"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
@@ -67,6 +68,7 @@
         android:background="@color/colorPrimary"
         android:fontFamily="@font/droid_sans_bold"
         android:text="@string/boton_egreso"
+        android:textSize="18sp"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
         android:onClick="nuevoEgreso"/>
@@ -79,6 +81,7 @@
         android:background="@color/colorPrimary"
         android:fontFamily="@font/droid_sans_bold"
         android:text="@string/boton_detalle"
+        android:textSize="18sp"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
         android:onClick="mostrarDetalle"/>
