--- a/app/src/main/res/layout/ingreso.xml
+++ b/app/src/main/res/layout/ingreso.xml
@@ -20,7 +20,7 @@
         android:layout_marginTop="60dp"
         android:fontFamily="@font/droid_sans_bold"
         android:textColor="#000000"
-        android:textSize="16sp"
+        android:textSize="22sp"
         android:text="@string/boton_nuevo"/>
 
 
@@ -37,7 +37,7 @@
             android:fontFamily="@font/droid_sans_bold"
             android:text="Monto:"
             android:textColor="#000000"
-            android:textSize="16sp" />
+            android:textSize="18sp" />
 
         <EditText
             android:id="@+id/editText2"
@@ -60,13 +60,15 @@
             android:fontFamily="@font/droid_sans_bold"
             android:text="Concepto:"
             android:textColor="#000000"
-            android:textSize="16sp" />
+            android:textSize="18sp"
+            android:layout_marginTop="20dp"/>
 
         <Spinner
             android:id="@+id/lista_conceptos"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:entries="@array/conceptos" />
+            android:entries="@array/conceptos_ingresos"
+            android:layout_marginTop="20dp"/>
     </android.support.v7.widget.LinearLayoutCompat>
 
     <Button
@@ -75,6 +77,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="100dp"
         android:layout_marginTop="35dp"
+        android:textSize="18sp"
         android:background="@color/colorPrimary"
         android:fontFamily="@font/droid_sans_bold"
         android:text="Seleccionar Fecha"
@@ -100,6 +103,7 @@
         android:background="@color/colorPrimary"
         android:fontFamily="@font/droid_sans_bold"
         android:text="Aceptar"
+        android:textSize="18sp"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
         android:onClick="cargarIngreso"/>
@@ -113,6 +117,7 @@
         android:background="@color/colorPrimary"
         android:fontFamily="@font/droid_sans_bold"
         android:text="Cancelar"
+        android:textSize="18sp"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
         android:onClick="Inicio"/>
